--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
 html, body {
     height: 100%;
     width: 100%;;
+    background: linear-gradient(purple,rgb(233, 166, 176));
 }
 
 body {
@@ -30,6 +31,7 @@ body {
     text-align: center;
     align-items: center;
     justify-content: center;
+    background-color: white;
 }
 
 
@@ -48,6 +50,7 @@ body {
     font-weight: bold;
     text-align: center;
     cursor: pointer;
+    margin-top: 5px;
 }
 #name-type {
     padding: 10px;
@@ -58,7 +61,7 @@ body {
     font-weight: bold;
 }
 
-#pesquisa {
+#search {
     height: 35px;
     border-radius: 5px;
     text-align: center;
@@ -85,8 +88,8 @@ img {
     padding: 20px;
 }
 
-#pesquisa::placeholder {
+#search::placeholder {
     text-align:left;
-    margin-right:5px;
+    padding-left: 5px;
     font-family: 'Poppins', sans-serif;
 }
